<resources>
    <string name="app_name">Eathood</string>
    <string name="food_list_title">Daftar Makanan</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_restart">Restart</string>
    <string name="profile_name">Putra Nugraha</string>
    <string name="profile_email">putra.graha.7@gmail.com</string>
    <string name="label_title">Choose light that needs re-color:</string>
    <string name="label_top_left">Top Left</string>
    <string name="label_top_right">Top Right</string>
    <string name="label_bottom_left">Bottom Left</string>
    <string name="label_bottom_right">Bottom Right</string>

    <string-array name="food_array">
        <item>Bakso</item>
        <item>Donat</item>
        <item>Martabak Har</item>
        <item>Martabak Mesir</item>
        <item>Mie Goreng</item>
        <item>Nasi Goreng</item>
        <item>Pempek</item>
        <item>Sate Madura</item>
        <item>Sate Padang</item>
        <item>Siomay</item>
        <item>Tekwan</item>
    </string-array>
</resources>
