<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/iv_light_top_left"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    <ImageView
            android:id="@+id/iv_light_top_right"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    <ImageView
            android:id="@+id/iv_light_bottom_left"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

    <ImageView
            android:id="@+id/iv_light_bottom_right"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_title" />

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_top_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_top_left" />

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_top_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_top_right" />

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_bottom_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_bottom_left" />

        <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_bottom_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_bottom_right" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>